--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Gateway for \"What are the Odds?\", managing microservice connections",
   "main": "main.js",
   "scripts": {
+    "start": "node main.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -20,7 +21,10 @@
   },
   "homepage": "https://github.com/snoozebaumer/wato-gateway#readme",
   "dependencies": {
+    "axios": "^1.6.7",
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.4",
     "express": "^4.18.2"
   }
 }
