--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,4 +15,5 @@ jobs:
     steps:
     - uses: actions/checkout@v3
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag gateway:$(date +%s)
+    - run: npm i
+    - run: docker build . --file Dockerfile --tag gateway:$(date +%s)
